--- a/paginas/carta.html
+++ b/paginas/carta.html
@@ -9,14 +9,24 @@
     </head>
     <body>
         <header>
-            <div class="titulo">
-                <h1>Echa un vistazo a todas nuestras pizzas</h1>
-                <h2>Elaboradas especialmente para ti...</h2>
-            </div>
-            
-        </header>
+            <div class="wrapper">
+                <img id="logo"src="../img/icono.png" alt="Logo Pizzeria Palermo"/>
+                <h1 id="titulo">Pizzeria<br>Palermo</h1> 
+                <nav>
+                    <ul>
+                        <li><a href="../index.html">Inicio</a></li>              
+                        <li><a href=".\ubicacion.html">Ubicaciones</a></li>
+                        <li><a href="#">Nuestras pizzas</a></li>
+                        <li><a href=".\contacto.html">Contacto</a></li>
+                      </ul>
+                </nav>
+            </div>        
+        </header> 
         <main>
-
+            <div class="titulo">
+                <h2>Echa un vistazo a todas nuestras pizzas</h2>
+                <h3>Elaboradas especialmente para ti...</h3>
+            </div>
         </main>
     </body>
 </html>
