--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -8,8 +8,21 @@
         <link rel="stylesheet" href="../estilos/styleContacto.css" type="text/css"/>
     </head>
     <body>
-        <h1>Contácta con nosotros</h1>
-        
+        <header>
+            <div class="wrapper">
+                <img id="logo"src="../img/icono.png" alt="Logo Pizzeria Palermo"/>
+                <h1 id="titulo">Pizzeria<br>Palermo</h1> 
+                <nav>
+                    <ul>
+                        <li><a href="../index.html">Inicio</a></li>              
+                        <li><a href="./ubicacion.html">Ubicaciones</a></li>
+                        <li><a href="./carta.html">Nuestras pizzas</a></li>
+                        <li><a href="#">Contacto</a></li>
+                      </ul>
+                </nav>
+            </div>        
+        </header> 
+        <h2>Contácta con nosotros</h2>     
             <form>
                 <fieldset id="f">
                     <table>
