--- a/paginas/ubicacion.html
+++ b/paginas/ubicacion.html
@@ -8,12 +8,25 @@
         <link rel="stylesheet" href="../estilos/styleUbicacion.css" type="text/css"/>
     </head>
     <body>
-        
-        <h1>Ven a nuestra pizzeria...</h1>
+        <header>
+            <div class="wrapper">
+                <img id="logo"src="../img/icono.png" alt="Logo Pizzeria Palermo"/>
+                <h1 id="titulo">Pizzeria<br>Palermo</h1> 
+                <nav>
+                    <ul>
+                        <li><a href="../index.html">Inicio</a></li>              
+                        <li><a href="#">Ubicaciones</a></li>
+                        <li><a href=".\carta.html">Nuestras pizzas</a></li>
+                        <li><a href=".\contacto.html">Contacto</a></li>
+                      </ul>
+                </nav>
+            </div>        
+        </header>
+        <h2>Ven a nuestra pizzeria...</h2>
         <div style="width: 100%">
             <iframe width="100%" height="600" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d24346.94180133715!2d-3.817472016751748!3d40.28979342122481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sadif%20fuenlabrada!5e0!3m2!1ses!2ses!4v1668344817594!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div><br />
-        <p>
+        <p id="bloqueHorario">
             <label class="txtUbic">Horario:</label>
             
             <ul id="horario">
