Mensaje en html carta

--- a/paginas/carta.html
+++ b/paginas/carta.html
@@ -6,6 +6,7 @@
         <meta name="Virginia" content="Ejemplo sitio web Pizzeria" />
         <link rel="shortcut icon" href="../img/icono.png">
         <link rel="stylesheet" href="../estilos/styleCarta.css" type="text/css"/>
+        <script src="carta.js"></script>
     </head>
     <body>
         <header>
@@ -25,8 +26,9 @@
         <main>
             <div class="titulo">
                 <h2>Echa un vistazo a todas nuestras pizzas</h2>
-                <h3>Elaboradas especialmente para ti...</h3>
+                <h3>La cocina está actualmente en construcción...</h3>
             </div>
+            <div id="espPizzas"></div>
         </main>
     </body>
 </html>
